# utm-cp

./: .gitignore  LICENSE.md  README.md
Lab-2/: CMakeLists.txt  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex2.c  ex20.c  ex21.c  ex22.c  ex23.c  ex24.c  ex25.c  ex26.c  ex27.c  ex29.c  ex3.c  ex30.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
Lab-3/: CMakeLists.txt  text.c  zuma.c  zuma_outdated.c
Lab-4/: CMakeLists.txt  b2-1+2+3+4.c  b3-1.c  b3-2+3+4+5.c  b3-6+7.c  bin-to-x.c  breal-to-x.c  dec-to-x.c  dreal-to-x.c  x-to-bin.c  x-to-breal.c  x-to-dec.c  x-to-dreal.c
Lab-5/: Node.py  main.py
