cmake_minimum_required(VERSION 3.12)
project(Lab-4 C)

set(CMAKE_C_STANDARD 11)

add_executable(dec-to-x dec-to-x.c)
add_executable(dreal-to-x dreal-to-x.c)
add_executable(bin-to-x bin-to-x.c)
add_executable(x-to-dec x-to-dec.c)
add_executable(x-to-bin x-to-bin.c)
add_executable(x-to-dreal x-to-dreal.c)