cmake_minimum_required(VERSION 3.12)
project(Lab-4 C)

set(CMAKE_C_STANDARD 11)

add_executable(dec-to-x dec-to-x.c)
add_executable(dreal-to-x dreal-to-x.c)
add_executable(bin-to-x bin-to-x.c)
add_executable(x-to-dec x-to-dec.c)
add_executable(x-to-bin x-to-bin.c)
add_executable(x-to-dreal x-to-dreal.c)
add_executable(breal-to-x breal-to-x.c)
add_executable(x-to-breal x-to-breal.c)

add_executable(b3-1 b3-1.c)
add_executable(b3-2+3+4+5 b3-2+3+4+5.c)
add_executable(b3-6+7 b3-6+7.c)

add_executable(b2-1+2+3+4 b2-1+2+3+4.c)